--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -27,7 +27,7 @@
     left: 0;
     right: 0;
     z-index: 99;
-    color: black;
+    color: var(--color-text);
     background: var(--color-base-tertiary);
     overflow: hidden;
     padding: 1em 1.5em;
