--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -43,7 +43,7 @@
 .drawer.layer-group {
   padding-left: 3px;
   padding-right: 3px;
-  background: var(--color-base-tertiary);
+  background: var(--color-base-contrast);
 
   & > * {
     padding-left: 4px;
@@ -51,10 +51,10 @@
 }
 
 #layers > .drawer.layer-group .drawer.layer-view {
-  background: var(--color-base-tertiary);
+  background: var(--color-base-contrast);
   border: none;
   box-shadow: none;
-  border-top: 1px solid var(--color-base-secondary);
+  border-top: 1px solid var(--color-base-border);
 }
 
 #layers > .layer-view > .drawer,
@@ -64,5 +64,5 @@
 }
 
 #layers > .layer-view > .drawer {
-  background: var(--color-base-tertiary);
+  background: var(--color-base-contrast);
 }
