--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -142,6 +142,7 @@
           overflow: hidden;
           display: flex;
           flex-direction: column;
+          background-color: var(--color-base);
         }
 
         #Tabview {
@@ -197,7 +198,7 @@
 
     <div id="ctrls-divider"></div>
 
-    <div id="ctrls" class="lighter-background">
+    <div id="ctrls">
       <div id="ctrl-tabs" class="hover">
         <div data-id="layers" class="active material-symbols-outlined"></div>
         <div data-id="locations" class="material-symbols-outlined"></div>
