key entry - updated css;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1459,7 +1459,7 @@ dialog {
   button.layer-key {
     margin-right: 0.2em;
     &.active {
-      color: var(--color-base-tertiary);
+      color: var(--color-text-tertiary);
     }
   }
 }
