--- a/public/css/elements/_key.css
+++ b/public/css/elements/_key.css
@@ -2,7 +2,7 @@
   button.layer-key {
     margin-right: 0.2em;
     &.active {
-      color: var(--color-base-tertiary);
+      color: var(--color-text-tertiary);
     }
   }
 }
