Dropdown & searchbox - colours adjusted;

--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -65,10 +65,10 @@
     & .label {
       padding: 0 6px;
       border-radius: 2px;
-      color: var(--color-base-tertiary);
+      color: var(--color-text);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-accent);
+      background-color: var(--color-accent-hover);
     }
   }
 
