--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1427,10 +1427,10 @@ dialog {
     & .label {
       padding: 0 6px;
       border-radius: 2px;
-      color: var(--color-base-tertiary);
+      color: var(--color-text);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-accent);
+      background-color: var(--color-accent-hover);
     }
   }
   &.active {
@@ -1506,6 +1506,7 @@ dialog {
     z-index: 999;
     & > li {
       padding: 5px;
+      color: var(--color-text);
     }
     & > li:hover {
       background-color: var(--color-accent-hover);
@@ -1518,10 +1519,10 @@ dialog {
       padding: 0 2px;
       margin-right: 2px;
       border-radius: 2px;
-      color: var(--color-base-tertiary);
+      color: var(--color-text);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-accent);
+      background-color: var(--color-accent-hover);
     }
   }
 }
