--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -222,6 +222,8 @@ body {
 .popup {
   position: absolute;
   background-color: var(--color-base-tertiary);
+  color: var(--color-text);
+  border: solid 1px var(--color-base-border);
   bottom: 12px;
   transform: translate(-50%, 0);
   &::after,
@@ -232,7 +234,7 @@ body {
     pointer-events: none;
   }
   &::after {
-    border-top-color: var(--color-base-tertiary);
+    border-top-color: var(--color-base-border);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
