--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -2040,7 +2040,7 @@ dialog {
   & > a {
     margin-bottom: 10px;
     background-color: var(--color-base-tertiary);
-    box-shadow: 1px 1px 3px var(--dm-color-base-tertiary);
+    box-shadow: 1px 1px 3px var(--color-base-tertiary);
     border-radius: 50%;
     opacity: 0.9;
     padding: 5px;
