Color variables for tabview;
Tabview colours included in defaults
Removed dark mode stylesheet.

--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -3,6 +3,7 @@ button {
   outline: none;
   background: none;
   text-align: center;
+  color: var(--color-accent);
 
   > .material-symbols-outlined {
     pointer-events: none;
