--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -23,9 +23,10 @@
     height: inherit;
     overflow-x: auto;
     display: flex;
-    background-color: var(--color-base-secondary);
+    background-color: var(--color-base);
 
     & > .tab > .header {
+      color: var(--color-text);
       min-width: 8em;
       height: 100%;
       display: flex;
@@ -53,14 +54,17 @@
 
   & > .panel {
     position: relative;
+    background-color: var(--color-base);
 
     & > .flex-col {
+      background-color: var(--color-base-secondary);
       position: absolute;
       width: 100%;
       height: 100%;
     }
 
     & .dataview-target {
+      background-color: var(--color-base);
       width: 100%;
       height: 100%;
       overflow-y: auto;
@@ -74,4 +78,40 @@
   & .dropdown > ul {
     position: fixed;
   }
+
+  /* Tabulator colour overrides */
+
+  .tabulator-header > * {
+    background-color: var(--color-base);
+  }
+
+  .tabulator-col > * {
+    background-color: var(--color-base);
+    color: var(--color-accent);
+  }
+
+  .tabulator-row {
+    color: var(--color-text);
+
+    &.tabulator-row-odd {
+      background-color: var(--color-base-secondary);
+    }
+
+    &.tabulator-row-even {
+      background-color: var(--color-base-tertiary);
+    }
+  }
+
+  .tabulator-footer {
+    background-color: var(--color-base);
+
+    .tabulator-page {
+      color: var(--color-accent);
+
+      &.active {
+        color: var(--color-accent-active);
+      }
+    }
+  }
+
 }
