--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -32,7 +32,8 @@
       display: flex;
       align-items: center;
       white-space: nowrap;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3)
+      border: solid 1px var(--color-base-border);
+      box-shadow: var(--color-base-border) 0px 2px 5px -1px, var(--color-base-contrast)
         0px 1px 3px -1px;
       border-radius: 3px 1em 0 0;
       padding: 10px;
