--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -2,8 +2,10 @@
   width: 100%;
   overflow: visible;
   position: relative;
-  background-color: var(--color-base-tertiary);
+  background-color: var(--color-base-secondary);
   box-shadow: var(--color-base-secondary) 0px 8px 24px;
+  border: 1px solid var(--color-base-border);
+  border-radius: 3px;
 
   &:disabled {
     pointer-events: none;
@@ -44,6 +46,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     box-shadow: 1px 1px 3px var(--color-base-secondary);
+    border: 1px solid var(--color-base-border);
     margin-top: -1px;
     text-align: left;
     z-index: 997;
