Dropdown & searchbox css;
Removed messy hardcoded box shadow.
Border instead.

--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -13,7 +13,7 @@
   /* Text */
   --color-text: #3f3f3f;
   --color-text-secondary: #858585;
-  --color-text-tertiary: #dddddd;
+  --color-text-tertiary: #ffffff;
 
   /* Accent */
   --color-accent: #003d57;
