--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -7,7 +7,7 @@
   --color-base-border: #dddddd;
   --color-text: #3f3f3f;
   --color-text-secondary: #858585;
-  --color-text-tertiary: #dddddd;
+  --color-text-tertiary: #ffffff;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
   --color-accent-hover: #939faa;
