--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -10,7 +10,7 @@
   --color-base-border: #dddddd;
   --color-text: #3f3f3f;
   --color-text-secondary: #858585;
-  --color-text-tertiary: #dddddd;
+  --color-text-tertiary: #ffffff;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
   --color-accent-hover: #939faa;
@@ -1378,7 +1378,6 @@ dialog {
   overflow: visible;
   position: relative;
   background-color: var(--color-base-secondary);
-  box-shadow: var(--color-base-secondary) 0px 8px 24px;
   border: 1px solid var(--color-base-border);
   border-radius: 3px;
   &:disabled {
