--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -12,7 +12,7 @@
 
 .box-shadow {
   border: 1px solid var(--color-base-border);
-  box-shadow: 2px 2px 4px var(--color-base-secondary);
+  box-shadow: 1px 1px 2px var(--color-base-tertiary);
 }
 
 .bold {
