--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -64,7 +64,7 @@
 }
 .box-shadow {
   border: 1px solid var(--color-base-border);
-  box-shadow: 2px 2px 4px var(--color-base-secondary);
+  box-shadow: 1px 1px 2px var(--color-base-tertiary);
 }
 .bold {
   font-weight: bold;
