--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -12,7 +12,7 @@
 
 .box-shadow {
   border: 1px solid var(--color-base-border);
-  box-shadow: 1px 1px 2px var(--color-base-tertiary);
+  box-shadow: var(--color-base-border) 0px 1px 4px;
 }
 
 .bold {
