--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -31,8 +31,8 @@ body {
       display: inline-block;
       white-space: nowrap;
       line-height: 1;
-      background: #fff9;
-      border-bottom: 2px solid var(--color-base-secondary);
+      background: var(--color-base-secondary);
+      border-bottom: 2px solid var(--color-base-border);
     }
   }
 }
