Mapp attribution - finer bottom border after colour adjustement.

--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -32,7 +32,9 @@ body {
       white-space: nowrap;
       line-height: 1;
       background: var(--color-base-secondary);
-      border-bottom: 2px solid var(--color-base-border);
+      padding: 0 1px;
+      border-radius: 2px;
+      border-bottom: 1px solid var(--color-base-border);
     }
   }
 }
