--- a/public/css/base/_inputs.css
+++ b/public/css/base/_inputs.css
@@ -16,7 +16,7 @@ input {
 
   &.invalid {
     opacity: 0.5;
-    outline: 1px solid var(--color-blocked);
+    outline: 1px solid var(--color-danger);
   }
 }
 
