--- a/public/css/layout/_toolbars.css
+++ b/public/css/layout/_toolbars.css
@@ -92,7 +92,7 @@
       right: 5%;
       width: 50px;
       height: 50px;
-      background-color: var(--color-blocked);
+      background-color: var(--color-danger);
     }
   }
 }
