--- a/public/css/layout/_popup.css
+++ b/public/css/layout/_popup.css
@@ -2,7 +2,7 @@
   position: absolute;
   background-color: var(--color-base-tertiary);
   color: var(--color-text);
-  border: solid 1px var(--color-base-border);
+  border: solid 1px var(--color-border);
   bottom: 12px;
   transform: translate(-50%, 0);
 
@@ -15,7 +15,7 @@
   }
 
   &::after {
-    border-top-color: var(--color-base-border);
+    border-top-color: var(--color-border);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
