--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -138,7 +138,7 @@ body {
       background: var(--color-base-secondary);
       padding: 0 1px;
       border-radius: 2px;
-      border-bottom: 1px solid var(--color-base-border);
+      border-bottom: 1px solid var(--color-border);
     }
   }
 }
@@ -228,7 +228,7 @@ body {
   position: absolute;
   background-color: var(--color-base-tertiary);
   color: var(--color-text);
-  border: solid 1px var(--color-base-border);
+  border: solid 1px var(--color-border);
   bottom: 12px;
   transform: translate(-50%, 0);
   &::after,
@@ -239,7 +239,7 @@ body {
     pointer-events: none;
   }
   &::after {
-    border-top-color: var(--color-base-border);
+    border-top-color: var(--color-border);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
