--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -11,8 +11,8 @@
 }
 
 .box-shadow {
-  border: 1px solid var(--color-base-border);
-  box-shadow: var(--color-base-border) 0px 1px 4px;
+  border: 1px solid var(--color-border);
+  box-shadow: var(--color-border) 0px 1px 4px;
 }
 
 .bold {
