--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -70,13 +70,13 @@
 
   &.flat {
     border-radius: 2px;
-    border: 1px solid var(--color-base-border);
+    border: 1px solid var(--color-border);
   }
 
   &.raised {
     border-radius: 2px;
     box-shadow: 1px 1px 3px var(--color-base-secondary);
-    border: 1px solid var(--color-base-border);
+    border: 1px solid var(--color-border);
   }
 
   &.raised.empty {
