--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -3,7 +3,7 @@
   overflow: visible;
   position: relative;
   background-color: var(--color-base-secondary);
-  border: 1px solid var(--color-base-border);
+  border: 1px solid var(--color-border);
   border-radius: 3px;
 
   &:disabled {
@@ -45,7 +45,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     box-shadow: 1px 1px 3px var(--color-base-secondary);
-    border: 1px solid var(--color-base-border);
+    border: 1px solid var(--color-border);
     margin-top: -1px;
     text-align: left;
     z-index: 997;
