--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -34,7 +34,7 @@ body {
       background: var(--color-base-secondary);
       padding: 0 1px;
       border-radius: 2px;
-      border-bottom: 1px solid var(--color-base-border);
+      border-bottom: 1px solid var(--color-border);
     }
   }
 }
