--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -32,7 +32,7 @@
       display: flex;
       align-items: center;
       white-space: nowrap;
-      border: solid 1px var(--color-base-border);
+      border: solid 1px var(--color-border);
       border-radius: 3px 1em 0 0;
       padding: 10px;
       -webkit-user-select: none;
