--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -108,7 +108,7 @@
       color: var(--color-accent);
 
       &.active {
-        color: var(--color-accent-active);
+        color: var(--color-active);
       }
     }
   }
