--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -7,12 +7,12 @@
   color: var(--color-accent);
 
   &.active {
-    color: var(--color-accent-active);
+    color: var(--color-active);
   }
 
   &.on-colour,
   &.on {
-    color: var(--color-accent-active);
+    color: var(--color-active);
   }
 
   &.no-colour {
@@ -34,5 +34,5 @@
 }
 
 .active > .material-symbols-outlined {
-  color: var(--color-accent-active);
+  color: var(--color-active);
 }
