--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -21,7 +21,7 @@
     }
 
     & > li:hover {
-      background-color: var(--color-accent-hover);
+      background-color: var(--color-hover);
       cursor: pointer;
     }
 
@@ -36,7 +36,7 @@
       color: var(--color-text);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-accent-hover);
+      background-color: var(--color-hover);
     }
   }
 }
